--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,8 @@ a:hover {
   color: #535bf2;
 }
 
+h1,h2,h3,h4,h5{text-align: center;}
+
 button {
   padding: 0.2rem 0.7rem;
   border-radius: 8px;
